# monospay

./: .gitignore  MCP_SERVER.md  README.md  SECURITY.md  __init__.py  build_wheels.py  cli.py  demo.cast  demo_record.sh  install.sh  langchain_tools.py  mono_mcp_server.py  openai_functions.py  pyproject.toml
.github/workflows/: publish.yml
mono_sdk/: __init__.py  cli.py  client.py  errors.py  langchain_tools.py  mcp_server.py  models.py  openai_functions.py
sdk/: pyproject.toml
