[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ── Package identity ───────────────────────────────────────────────────────────
[project]
name = "mono-m2m-sdk"
version = "0.4.6"
description = "Financial infrastructure for autonomous AI agents — monospay.com"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "mono", email = "hello@monospay.com" }]
keywords = ["ai", "agents", "payments", "usdc", "settlement", "base", "langchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
langchain = ["langchain-core>=0.1.0"]

# ── CLI entry point ────────────────────────────────────────────────────────────
# pipx/pip generate the `mono` binary automatically from this declaration.
# Resolved import: mono_sdk/cli.py → function main()
[project.scripts]
mono = "mono_sdk.cli:main"

# ── URLs ───────────────────────────────────────────────────────────────────────
[project.urls]
Homepage      = "https://monospay.com"
Documentation = "https://monospay.com/docs"
Repository    = "https://github.com/Agash0818/mono-sdk"

# ── Hatchling build config ─────────────────────────────────────────────────────
#
# Project layout (repo root = this directory):
#   ./                   ← project root, pyproject.toml lives here
#   └── mono_sdk/        ← Python package (installed as `import mono_sdk`)
#       ├── __init__.py
#       ├── cli.py
#       ├── client.py
#       └── ...
#
[tool.hatch.build]
sources = ["."]

[tool.hatch.build.targets.wheel]
packages = ["mono_sdk"]

[tool.hatch.build.targets.sdist]
include = [
    "mono_sdk/**/*.py",
    "README.md",
    "pyproject.toml",
]
