[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mono-m2m-sdk"
version = "0.4.0"
description = "Financial infrastructure for autonomous AI agents — monospay.com"
readme = "../README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "mono", email = "hello@monospay.com" }]
keywords = ["ai", "agents", "payments", "usdc", "settlement", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
langchain = ["langchain-core>=0.1.0"]

[project.scripts]
mono = "mono_sdk.cli:main"

[project.urls]
Homepage      = "https://monospay.com"
Documentation = "https://monospay.com/docs"
Repository    = "https://github.com/Agash0818/mono-sdk"

[tool.hatch.build.targets.wheel]
packages = ["mono_sdk"]

[tool.hatch.build.targets.sdist]
include = ["mono_sdk/**", "../README.md"]
